<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.jenkins-ci.plugins</groupId>
        <artifactId>plugin</artifactId>
        <version>2.37</version>
    </parent>

    <artifactId>radargun</artifactId>
    <version>1.5-SNAPSHOT</version>
    <packaging>hpi</packaging>
    <name>RadarGun</name>
    <url>http://wiki.jenkins-ci.org/display/JENKINS/RadarGun+plugin</url>

    <developers>
        <developer>
            <id>vjuranek</id>
            <name>Vojtech Juranek</name>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/jenkinsci/radargun-plugin.git</connection>
        <developerConnection>scm:git:git@github.com:jenkinsci/radargun-plugin.git</developerConnection>
        <url>https://github.com/jenkinsci/radargun-plugin</url>
        <tag>HEAD</tag>
    </scm>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <properties>
        <java.level>8</java.level> <!-- for Jenkins Animal Sniffer plugin -->
        <jenkins.version>2.60.3</jenkins.version>
        <jenkins-test-harness.version>2.36</jenkins-test-harness.version>
        <version.snakeyaml>1.15</version.snakeyaml>
        <version.mockito>2.0.31-beta</version.mockito>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>${version.snakeyaml}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${version.mockito}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>repo.jenkins-ci.org</id>
            <url>https://repo.jenkins-ci.org/releases</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>repo.jenkins-ci.org</id>
            <url>http://repo.jenkins-ci.org/public/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>repo.jenkins-ci.org</id>
            <url>http://repo.jenkins-ci.org/public/</url>
        </pluginRepository>
    </pluginRepositories>

</project>
